--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-.cabecalho {
+.cabecalho  {}
     background-color: #424E61;
     color: white;
     display: flex;
@@ -21,3 +21,5 @@
     margin: 0 16px;
     font-size: 24px;
 }
+
+escola-imagem
